# annosql

./: README.md  pyproject.toml
annosql/: __init__.py  engine.py  model.py
annosql/column/: attribute.py  column.py
annosql/dialect/: __init__.py  base.py  sqlite.py
examples/: composite.py  relationship.py  test.py
