[project]
name = "annosql"
version = "0.0.1"
description = "My package description"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
]
dependencies = [
]

[project.optional-dependencies]
dev = ["black", "isort", "pylint"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
