[project]
name = "annosql"
version = "0.0.1"
description = "My package description"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
classifiers = [
]
dependencies = [
]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "mypy"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["annosql", "examples"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
